# hexagon-hypervisor

./: .gitignore  .gitmail  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  REWRITE-README.md  SECURITY.md  add-copyright-blob-callback.py  add-copyright-file-callback.py  add-copyright-headers.py  commit-callback.py  email-fixes.py  lldb-setup  log_diagram.excalidraw  logging-api.excalidraw  logging-arch.excalidraw  makefile  notes.md  pingpong_notes  rewrite-history.sh  sanitize-commit-messages.py  todo  todo2  toolchain.cmake  vms  wip_notes.md
booter/: CMakeLists.txt  Makefile  arch_pmu.h  bigio.c  boot.S  booter.c  booter_event.S  elf.c  elf.h  hello.c  should_crash.c  should_pagefault.c  vapa.x
kernel/: CMakeLists.txt  Makefile  bugs  notes  overview.txt  todo
kernel/checkers/: checker.spec
kernel/checkers/checker_help/: checker_help.h
kernel/checkers/checker_kernel_locked/: checker_kernel_locked.check.c  checker_kernel_locked.h  checker_kernel_locked.spec
kernel/checkers/checker_ready/: checker_ready.check.c  checker_ready.h  checker_ready.ref.c  checker_ready.spec
kernel/checkers/checker_ring/: checker_ring.check.c  checker_ring.h  checker_ring.spec
kernel/checkers/checker_runlist/: checker_runlist.check.c  checker_runlist.h  checker_runlist.spec
kernel/checkers/checker_tlb_locked/: checker_tlb_locked.check.c  checker_tlb_locked.h  make.inc
kernel/data/context/: context.h  context.ref.S  context.spec  context.v3opt.S  context.v4opt.S  context.v5opt.S  context.v60opt.S  context.v65opt.S  context.v68opt.S  context.v73opt.S  context.v81opt.S
kernel/data/globals/: globals.h  globals.ref.c  globals.spec
kernel/data/idtype/: idtype.h  idtype.spec
kernel/data/intconfig/: intconfig.h  intconfig.ref.c  intconfig.spec
kernel/data/readylist/: readylist.h  readylist.ref.c  readylist.spec
kernel/data/runlist/: runlist.h  runlist.ref.c  runlist.spec
kernel/data/stacks/: stacks.h  stacks.ref.S  stacks.spec
kernel/data/thread/: thread.h  thread.ref.c  thread.spec
kernel/data/vm/: vm.h  vm.ref.c  vm.spec  vmblock.h
kernel/docs/: overview.txt  security.txt
kernel/error/fatal/: fatal.all.c  fatal.h  fatal.ref.c  fatal.spec  fatal_handler.h  make.inc
kernel/event/dma/: dma.ref.S
kernel/event/error/: error.ref.S  error.spec
kernel/event/fastint/: fastint.ref.S  fastint.spec  fastint.v3opt.S  fastint.v4opt.S  fastint.v5opt.S  fastint.v60opt.S  fastint.v65opt.S  fastint.v68opt.S  fastint.v73opt.S  fastint.v81opt.S
kernel/event/interrupt/: interrupt.h  interrupt.opt.S  interrupt.ref.S  interrupt.spec  interrupt.v3opt.S  interrupt.v4opt.S  interrupt.v5opt.S  interrupt.v60opt.S  interrupt.v65opt.S  interrupt.v68opt.S  interrupt.v73opt.S  interrupt.v81opt.S
kernel/event/intpool/: intpool.h  intpool.ref.c  intpool.spec
kernel/event/passthru/: passthru.h  passthru.ref.c  passthru.spec
kernel/event/popup/: popup.h  popup.ref.c  popup.spec  popup.v4opt.S  popup.v5opt.S  popup.v60opt.S  popup.v65opt.S  popup.v68opt.S  popup.v73opt.S  popup.v81opt.S
kernel/event/preempt/: preempt.ref.S  preempt.spec  preempt.v4opt.S  preempt.v5opt.S  preempt.v60opt.S  preempt.v65opt.S  preempt.v68opt.S  preempt.v73opt.S  preempt.v81opt.S
kernel/event/trap/: trap.ref.S  trap.spec  trap.v3opt.S  trap.v4opt.S  trap.v5opt.S  trap.v60opt.S  trap.v65opt.S  trap.v68opt.S  trap.v73opt.S  trap.v81opt.S
kernel/event/vectors/: vectors.opt.S  vectors.ref.S  vectors.spec
kernel/futex/futex/: futex.h  futex.spec
kernel/futex/futex_classic/: futex_classic.h  futex_classic.ref.c  futex_classic.spec  futex_classic.v4opt.S  futex_classic.v5opt.S  futex_classic.v60opt.S  futex_classic.v65opt.S  futex_classic.v68opt.S  futex_classic.v73opt.S  futex_classic.v81opt.S
kernel/futex/futex_common/: futex_common.h  futex_common.ref.c  futex_common.spec  futex_common.v4opt.S  futex_common.v5opt.S  futex_common.v60opt.S  futex_common.v65opt.S  futex_common.v68opt.S  futex_common.v73opt.S  futex_common.v81opt.S
kernel/futex/futex_misc/: futex_misc.h  futex_misc.ref.c  futex_misc.spec  futex_misc.v4opt.S  futex_misc.v55opt.S  futex_misc.v5opt.S  futex_misc.v60opt.S  futex_misc.v65opt.S  futex_misc.v68opt.S  futex_misc.v73opt.S  futex_misc.v81opt.S
kernel/futex/futex_pi/: futex_pi.h  futex_pi.ref.c  futex_pi.spec  futex_pi.v4opt.S  futex_pi.v5opt.S  futex_pi.v60opt.S  futex_pi.v65opt.S  futex_pi.v68opt.S  futex_pi.v73opt.S  futex_pi.v81opt.S
kernel/init/boot/: boot.h  boot.ref.S  boot.spec  bootmap_macros.h
kernel/init/bootvm/: bootvm.h  bootvm_entry.h
kernel/init/entry/: entry.all.S  entry.ref.c
kernel/init/l2cache/: l2cache.h  l2cache.ref.c
kernel/init/setup/: setup.ref.c  setup.spec
kernel/init/subsystem/: subsystem.h  subsystem.ref.c
kernel/init/symbols/: symbols.h
kernel/init/tcm/: tcm.h  tcm.ref.c
kernel/mem/alloc/: alloc.h  alloc.ref.c  alloc.spec
kernel/mem/asid/: asid.h  asid.ref.c  asid.spec  asid_types.h
kernel/mem/bootmap/: bootmap.def  bootmap.h  bootmap.ref.c  bootmap.spec  bootmap_macros.h  make.inc
kernel/mem/linear/: linear.h  linear.ref.c  linear.spec
kernel/mem/offset/: offset.h  offset.ref.c  offset.spec
kernel/mem/pagefault/: pagefault.h  pagefault.ref.c  pagefault.spec
kernel/mem/pagewalk/: pagewalk.h  pagewalk.ref.c  pagewalk.spec
kernel/mem/physread/: physread.h  physread.spec
kernel/mem/safemem/: safemem.h  safemem.ref.c  safemem.spec  safemem.v4opt.S  safemem.v5opt.S  safemem.v60opt.S  safemem.v65opt.S  safemem.v68opt.S  safemem.v73opt.S  safemem.v81opt.S
kernel/mem/stlb/: stlb.all.c  stlb.h  stlb.ref.c  (+9 more)
libs/: CMakeLists.txt  Makefile  TODO
libs/blast/: Makefile
libs/h2/: Makefile
libs/h2_compat/: Makefile
libs/locks/: Makefile
libs/mem/: notes
libs/posix/: Makefile  TODO  pthread_test.c
libs/posix_old/: TODO
libs/posix_qurt/: Makefile
libs/qube/: Makefile  TODO
libs/qurt/: Makefile
libs/sos/: Makefile
libs/timer/: Makefile
linux/: CMakeLists.txt  cosim.cfg  cosim_v5.cfg  devsim_v4.cfg  devsim_v5.cfg  gdb.cmd  loadlinux.c  loadlinux_event.S  makefile  pmap.def  ucos_image.S  vapa.x.in
(+1523 files in other folders)
